# DialLog

./: .clang-format  CMakeLists.txt  README.md  desired_cmdparser_CMakeLists.txt  original_cmdparser_CMakeLists.txt
.github/workflows/: build.yaml
patches/cmdparser/: CMakeLists.txt.patch
src/: main.cpp  usb_stubs.cpp  usb_stubs.h
tests/: main_test.cpp
